updating mostly client stuff

--- a/cw-client/src/app/app.component.html
+++ b/cw-client/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="bg">
-  <div class="start" *ngIf="!start" (click)="startGame()">
-    Start
-  </div>
-  <app-game-window *ngIf="start"></app-game-window>
-</div>
+<router-outlet></router-outlet>
