--- a/cw-client/src/app/game-window/game-window.component.html
+++ b/cw-client/src/app/game-window/game-window.component.html
@@ -4,10 +4,18 @@
 <div>
     Frame Length:{{ticLength}}
 </div>
+Player Position
 <div>
     X:{{playerPosition?.x.toFixed(2)}}
 </div>
 <div>
     Y:{{playerPosition?.y.toFixed(2)}}
 </div>
-<canvas #canvas width="600" height="300" (document:keydown)="keyDown($event)" (document:keyup)="keyUp($event)"></canvas>
+<canvas
+    #canvas
+    width="600"
+    height="300"
+    (document:keydown)="keyDown($event)"
+    (document:keyup)="keyUp($event)"
+    (document:mousemove)="mouseMove($event)"
+></canvas>
